Bug 1699468 - Pass StyleSizeOverrides into ComputeISizeValue(). r=TYLin

The inconsistent usage of block size and aspect ratio in ComputeSize() and
ComputeISizeValue() cause this assertion.

We use StyleSizeOverrides when measuring the content block sizes of flex
items, and the expected computed value of block size is auto.

And so in ComputeISizeValue(), we should use any field in StyleSizeOverrides
that having an override rather than fetching it from the style system.

Differential Revision: https://phabricator.services.mozilla.com/D111031